Flat skin: Fix button text alignment.

--- a/src/styles/flat/index.styl
+++ b/src/styles/flat/index.styl
@@ -35,6 +35,7 @@ button-colors(button, color) {
 		margin:margin;
 		line-height:1.5;
 		border:0;
+		text-align:left;
 		cursor:pointer;
 	}
 
